--- a/Resources/Prototypes/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/Catalog/uplink_catalog.yml
@@ -759,7 +759,7 @@
   name: uplink-observation-kit-name
   description: uplink-observation-kit-desc
   icon: { sprite: /Textures/Objects/Storage/boxicons.rsi, state: tracks }
-  productEntity: Observationskit
+  productEntity: ObservationsKit
   cost:
     Telecrystal: 4
   categories:
