Make female reptilians use female cry sound instead of male (#27563)
(cherry picked from commit 81e553401c749a03c62f0e1232e931220799e515)

--- a/Resources/Prototypes/Voice/speech_emote_sounds.yml
+++ b/Resources/Prototypes/Voice/speech_emote_sounds.yml
@@ -191,7 +191,7 @@
 
 
 - type: emoteSounds
-  id: UnisexReptilian
+  id: MaleReptilian
   params:
     variation: 0.125
   sounds:
@@ -205,6 +205,24 @@
       collection: Whistles
     Crying:
       collection: MaleCry
+    Weh:
+      collection: Weh
+
+- type: emoteSounds
+  id: FemaleReptilian
+  params:
+    variation: 0.125
+  sounds:
+    Scream:
+      path: /Audio/Voice/Reptilian/reptilian_scream.ogg
+    Laugh:
+      path: /Audio/Animals/lizard_happy.ogg
+    Honk:
+      collection: BikeHorn
+    Whistle:
+      collection: Whistles
+    Crying:
+      collection: FemaleCry
     Weh:
       collection: Weh
 
