--- a/Resources/Prototypes/SoundCollections/white.yml
+++ b/Resources/Prototypes/SoundCollections/white.yml
@@ -11,3 +11,8 @@
     - /White/Audio/Heart/heart2.wav
     - /White/Audio/Heart/heart3.ogg
     - /White/Audio/Heart/heart4.ogg
+
+- type: soundCollection
+  id: CombatMusic
+  files:
+  - /White/Audio/Insanity/maniac.ogg
