Red bool update (#27597)
* the meat and potatoes

yuh yuh yuh

* what the hell is a copyright?

am I right?

(cherry picked from commit a8bf2689a4696e841ce607c7061ac73faceeeefb)

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/boozeomat.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/boozeomat.yml
@@ -18,6 +18,7 @@
     DrinkCognacBottleFull: 3
     DrinkCoconutWaterCarton: 3
     DrinkColaBottleFull: 3
+    DrinkEnergyDrinkCan: 3
     DrinkMilkCarton: 2
     DrinkCreamCarton: 3
     DrinkGinBottleFull: 2
