--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks.yml
@@ -515,6 +515,22 @@
 
 - type: entity
   parent: DrinkGlass
+  id: BudgetInsulsDrinkGlass
+  suffix: budget insuls
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+        - ReagentId: BudgetInsulsDrink
+          Quantity: 30
+  - type: Icon
+    sprite: Objects/Consumable/Drinks/budgetinsulsdrink.rsi
+    state: icon
+
+- type: entity
+  parent: DrinkGlass
   id: DrinkCarrotJuice
   suffix: carrot juice
   components:
@@ -543,6 +559,22 @@
           Quantity: 30
   - type: Icon
     sprite: Objects/Consumable/Drinks/chocolateglass.rsi
+    state: icon
+
+- type: entity
+  parent: DrinkGlass
+  id: RubberneckGlass
+  suffix: rubberneck
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+        - ReagentId: Rubberneck
+          Quantity: 30
+  - type: Icon
+    sprite: Objects/Consumable/Drinks/rubberneck.rsi
     state: icon
 
 - type: entity
@@ -1069,6 +1101,22 @@
           Quantity: 30
   - type: Icon
     sprite: Objects/Consumable/Drinks/icecreamglass.rsi
+    state: icon
+
+- type: entity
+  parent: DrinkGlass
+  id: IrishBoolGlass
+  suffix: irish bool
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+        - ReagentId: IrishBool
+          Quantity: 30
+  - type: Icon
+    sprite: Objects/Consumable/Drinks/beerglass.rsi
     state: icon
 
 - type: entity
@@ -2066,6 +2114,22 @@
 
 - type: entity
   parent: DrinkGlass
+  id: DrinkVodkaRedBool
+  suffix: vodka red bool
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+        - ReagentId: VodkaRedBool
+          Quantity: 30
+  - type: Icon
+    sprite: Objects/Consumable/Drinks/ginvodkaglass.rsi
+    state: icon
+
+- type: entity
+  parent: DrinkGlass
   id: DrinkVodkaTonicGlass
   suffix: vodka tonic
   components:
@@ -2109,6 +2173,22 @@
         reagents:
         - ReagentId: JuiceWatermelon
           Quantity: 30
+
+- type: entity
+  parent: DrinkGlass
+  id: DrinkWatermelonWakeup
+  suffix: watermelon wakeup
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+        - ReagentId: WatermelonWakeup
+          Quantity: 30
+  - type: Icon
+    sprite: Objects/Consumable/Drinks/champagneglass.rsi
+    state: icon
 
 - type: entity
   parent: DrinkGlass
@@ -2188,6 +2268,22 @@
           Quantity: 30
   - type: Icon
     sprite: Objects/Consumable/Drinks/wineglass.rsi
+    state: icon
+
+- type: entity
+  parent: DrinkGlass
+  id: XenoBasherGlass
+  suffix: xeno basher
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+        - ReagentId: XenoBasher
+          Quantity: 30
+  - type: Icon
+    sprite: Objects/Consumable/Drinks/xenobasher.rsi
     state: icon
 
 # TODO: MOVE
