Allow EMP implants to be used while stunned or cuffed. (#27644)
Update types.yml

(cherry picked from commit 0056befd4bac47f9e86c975342fcc80583affbb9)

--- a/Resources/Prototypes/Actions/types.yml
+++ b/Resources/Prototypes/Actions/types.yml
@@ -127,6 +127,7 @@
   noSpawn: true
   components:
   - type: InstantAction
+    checkCanInteract: false
     useDelay: 40
     itemIconStyle: BigAction
     priority: -20
