--- a/Resources/Prototypes/Catalog/Fills/Boxes/syndicate.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/syndicate.yml
@@ -4,12 +4,12 @@
   name: electrical disruption kit
   suffix: Filled
   components:
-    - type: StorageFill
-      contents:
-        - id: EmpGrenade
-          amount: 3
-        - id: EmpImplanter
-          amount: 1
+  - type: StorageFill
+    contents:
+    - id: EmpGrenade
+      amount: 3
+    - id: EmpImplanter
+      amount: 1
 
 - type: entity
   parent: BoxVial
@@ -22,12 +22,45 @@
     - 0,0,3,2
   - type: StorageFill
     contents:
-      - id: Beaker
-        amount: 2
-      - id: Dropper
-      # It would be cool to have special "syndicate" chemical analysis goggles
-      - id: ClothingEyesGlassesChemical
-      - id: VestineChemistryVial
-        amount: 2
-      - id: BaseChemistryEmptyVial
-      - id: SyringeStimulants
+    - id: Beaker
+      amount: 2
+    - id: Dropper
+    # It would be cool to have special "syndicate" chemical analysis goggles
+    - id: ClothingEyesGlassesChemical
+    - id: VestineChemistryVial
+      amount: 2
+    - id: BaseChemistryEmptyVial
+    - id: SyringeStimulants
+
+- type: entity
+  parent: BoxCardboard
+  id: ThrowingKnivesKit
+  name: throwing knives kit
+  description: A set of 4 syndicate branded throwing knives, perfect for embedding into the body of your victims.
+  components:
+  - type: Storage
+    grid:
+    - 0,0,3,1
+  - type: StorageFill
+    contents:
+    - id: ThrowingKnife
+      amount: 4
+  - type: Sprite
+    layers:
+    - state: box_of_doom
+    - state: throwing_knives
+
+- type: entity
+  id: Observationskit
+  parent: BoxCardboard
+  name: observations kit
+  suffix: Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: SyndiCrewMonitorEmpty
+      amount: 1
+    - id: PowerCellHigh
+      amount: 1
+    - id: ClothingEyesGlassesHiddenSecurity
+      amount: 1
