Emergency Tank + Plasma Can visible on suit storage slot (#27598)
* Suitstorage Sprites + Plasma tank slots

* Fix some extra brackets

(cherry picked from commit 70d3cf7ba411ef38818f63eec944c4f0c7c33c98)

--- a/Resources/Prototypes/Entities/Objects/Tools/gas_tanks.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/gas_tanks.yml
@@ -256,7 +256,8 @@
   - type: Clothing
     sprite: Objects/Tanks/plasma.rsi
     slots:
-    - Back
+    - Belt
+    - suitStorage
   - type: Tag
     tags:
       - TankPlasma
