--- a/Resources/Prototypes/Entities/Clothing/Head/welding.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/welding.yml
@@ -20,6 +20,7 @@
     tags:
     - DroneUsable
     - WhitelistChameleon
+    - WeldingMask
   - type: HideLayerClothing
     slots:
     - Snout
@@ -39,6 +40,7 @@
     - DroneUsable
     - HamsterWearable
     - WhitelistChameleon
+    - WeldingMask
 
 - type: entity
   parent: WeldingMaskBase
