No more bad bleed

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/medical.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/medical.yml
@@ -6,6 +6,7 @@
     Ointment: 2
     Bloodpack: 2
     Gauze: 2
+    Tourniquet: 5
     EpinephrineChemistryBottle: 1
     Syringe: 2
     EmergencyMedipen: 2
