--- a/Resources/Prototypes/Stacks/medical_stacks.yml
+++ b/Resources/Prototypes/Stacks/medical_stacks.yml
@@ -34,6 +34,14 @@
   maxCount: 10
 
 - type: stack
+  id: tourniquet
+  name: tourniquet
+  icon: { sprite: "/Textures/Objects/Specific/Medical/medical.rsi", state: tourniquet }
+  spawn: tourniquet
+  maxCount: 5
+  itemSize: 1
+
+- type: stack
   id: MedicatedSuture
   name: medicated-suture
   icon: {sprite: "/Textures/Objects/Specific/Medical/medical.rsi", state: medicated-suture }
