--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/healing.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/healing.yml
@@ -257,7 +257,7 @@
       healingEndSound:
         path: "/Audio/Items/Medical/brutepack_end.ogg"
     - type: Stack
-      stackType: tourniquet
+      stackType: Tourniquet
       count: 5
     - type: StackPrice
       price: 10
