--- a/Resources/Prototypes/Entities/Mobs/Player/humanoid.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/humanoid.yml
@@ -42,7 +42,7 @@
       name: ghost-role-information-Death-Squad-name
       description: ghost-role-information-Death-Squad-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
       prototypes: [ DeathSquadGear ]
@@ -81,7 +81,7 @@
       name: ghost-role-information-ert-leader-name
       description: ghost-role-information-ert-leader-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
       prototypes: [ ERTLeaderGear ]
@@ -113,7 +113,7 @@
       name: ghost-role-information-ert-leader-name
       description: ghost-role-information-ert-leader-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
       prototypes: [ ERTLeaderGearEVA ]
@@ -137,7 +137,7 @@
       name: ghost-role-information-ert-leader-name
       description: ghost-role-information-ert-leader-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
       prototypes: [ ERTLeaderGearEVALecter ]
@@ -170,7 +170,7 @@
       name: ghost-role-information-ert-chaplain-name
       description: ghost-role-information-ert-chaplain-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: RandomMetadata
       nameSegments:
@@ -201,7 +201,7 @@
       name: ghost-role-information-ert-chaplain-name
       description: ghost-role-information-ert-chaplain-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
       prototypes: [ ERTChaplainGearEVA ]
@@ -234,7 +234,7 @@
       name: ghost-role-information-ert-janitor-name
       description: ghost-role-information-ert-janitor-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: RandomMetadata
       nameSegments:
@@ -265,7 +265,7 @@
       name: ghost-role-information-ert-janitor-name
       description: ghost-role-information-ert-janitor-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
       prototypes: [ ERTJanitorGearEVA ]
@@ -298,7 +298,7 @@
       name: ghost-role-information-ert-engineer-name
       description: ghost-role-information-ert-engineer-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: RandomMetadata
       nameSegments:
@@ -329,7 +329,7 @@
       name: ghost-role-information-ert-engineer-name
       description: ghost-role-information-ert-engineer-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
       prototypes: [ ERTEngineerGearEVA ]
@@ -362,7 +362,7 @@
       name: ghost-role-information-ert-security-name
       description: ghost-role-information-ert-security-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: RandomMetadata
       nameSegments:
@@ -393,7 +393,7 @@
       name: ghost-role-information-ert-security-name
       description: ghost-role-information-ert-security-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
       prototypes: [ ERTSecurityGearEVA ]
@@ -416,7 +416,7 @@
       name: ghost-role-information-ert-security-name
       description: ghost-role-information-ert-security-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
       prototypes: [ ERTSecurityGearEVALecter ]
@@ -449,7 +449,7 @@
       name: ghost-role-information-ert-medical-name
       description: ghost-role-information-ert-medical-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: RandomMetadata
       nameSegments:
@@ -480,7 +480,7 @@
       name: ghost-role-information-ert-medical-name
       description: ghost-role-information-ert-medical-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
       prototypes: [ ERTMedicalGearEVA ]
@@ -511,7 +511,7 @@
       name: ghost-role-information-cburn-agent-name
       description: ghost-role-information-cburn-agent-description
       raffle:
-        settings: default
+        settings: short
     - type: GhostTakeoverAvailable
     - type: RandomMetadata
       nameSegments:
