Make suit storage only available for hardsuits, softsuits, and armor (#27546)
* AAAAAAAAAAAAdd!

* o shit

* I FUCKING HATE INDENTATION GRAAAAAAAAAH

(cherry picked from commit da2b9afc3a6af6791222092d1223074ccb4dde1e)

--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/base_clothingouter.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/base_clothingouter.yml
@@ -163,6 +163,7 @@
   - type: ClothingTemperatureAdjust
   - type: ClothingRequiredStepTriggerImmune
     slots: WITHOUT_POCKET
+  - type: AllowSuitStorage
 
 - type: entity
   abstract: true
@@ -183,6 +184,7 @@
     size: Huge
   - type: ClothingRequiredStepTriggerImmune
     slots: WITHOUT_POCKET
+  - type: AllowSuitStorage
 
 - type: entity
   parent: ClothingOuterBase
