--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -21,6 +21,7 @@
         Heat: 0.80
   - type: ExplosionResistance
     damageCoefficient: 0.90
+  - type: AllowSuitStorage
   # WD edit sounds start
   - type: EmitSoundOnPickup
     sound:
@@ -267,6 +268,7 @@
   - type: ExplosionResistance
     damageCoefficient: 0.65
   - type: GroupExamine
+  - type: AllowSuitStorage
 
 - type: entity
   parent: ClothingOuterBaseLarge
