Rebalance-economy-station
Rebalance from Warete

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/atmosdrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/atmosdrobe.yml
@@ -17,3 +17,4 @@
     ClothingOuterSuitFire: 2
     ClothingOuterSuitAtmosFire: 1
     ClothingHeadHelmetAtmosFire: 1
+    ClothingUniformJumpsuitRepairmanNT: 3
