--- a/Resources/Prototypes/Entities/Objects/Misc/paper.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/paper.yml
@@ -87,6 +87,10 @@
         reagents:
         - ReagentId: Fiber
           Quantity: 1
+  - type: Material
+  - type: PhysicalComposition
+    materialComposition:
+      Paper: 100
 
 - type: entity
   name: paper scrap
