--- a/Resources/Prototypes/_White/Entities/Structures/Machines/doc_printer.yml
+++ b/Resources/Prototypes/_White/Entities/Structures/Machines/doc_printer.yml
@@ -20,8 +20,6 @@
         layer:
         - TabletopMachineLayer
   - type: Lathe
-  - type: BluespaceStorage
-  - type: MaterialStorage
   - type: ActivatableUI
     key: enum.LatheUiKey.Key
   - type: ActivatableUIRequiresPower
@@ -38,6 +36,9 @@
     price: 800
   - type: ResearchClient
   - type: TechnologyDatabase
+  - type: MaterialStorage
+    materialWhiteList:
+    - Paper
 
 # Document Printer
 - type: entity
@@ -116,304 +117,303 @@
     emagStaticRecipes:
     - BoxFolderBlackBAN
     - PaperSyndicat
-  - type: MaterialStorage
 
 # Recipe Paper
 #  Station->CentComm
 - type: latheRecipe
   id: PaperRequestTargetStation # Tide
   result: PaperRequestTargetStation
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperReportCC # Tide
   result: PaperReportCC
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperCompletedStation # Tide
   result: PaperCompletedStation
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperFailedStation # Tide
   result: PaperFailedStation
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestCentComm # Tide
   result: PaperRequestCentComm
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestERT # Tide
   result: PaperRequestERT
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestRXBZZ # Tide
   result: PaperRequestRXBZZ
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestExecution # Tide
   result: PaperRequestExecution
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestMagistrat # Tide
   result: PaperRequestMagistrat
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 #  PaperCommand
 - type: latheRecipe
   id: PaperDomotionComm # Tide
   result: PaperDomotionComm
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperDismissalReq # Tide
   result: PaperDismissalReq
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestHeadCouncil # Tide
   result: PaperRequestHeadCouncil
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperHeadCouncilEnd # Tide
   result: PaperHeadCouncilEnd
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 #  PaperSecurity
 - type: latheRecipe
   id: PaperOrderSec # Tide
   result: PaperOrderSec
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestExecutionSec # Tide
   result: PaperRequestExecutionSec
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperDonos # Tide
   result: PaperDonos
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperLic # Tide
   result: PaperLic
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperTimeRequestWeapon # Tide
   result: PaperTimeRequestWeapon
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperOrderWeapon # Tide
   result: PaperOrderWeapon
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestGuard # Tide
   result: PaperRequestGuard
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 #  PaperEng
 - type: latheRecipe
   id: PaperRequestBuild # Tide
   result: PaperRequestBuild
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestMaterial # Tide
   result: PaperRequestMaterial
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperReportElect # Tide
   result: PaperReportElect
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperReportAtmos # Tide
   result: PaperReportAtmos
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 #  PaperMed
 - type: latheRecipe
   id: PaperRequestNarco # Tide
   result: PaperRequestNarco
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestExecutionMed # Tide
   result: PaperRequestExecutionMed
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperWaiverOfClaims # Tide
   result: PaperWaiverOfClaims
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperDurka # Tide
   result: PaperDurka
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 #  PaperSci
 - type: latheRecipe
   id: PaperRequestReasonable # Tide
   result: PaperRequestReasonable
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestLaw # Tide
   result: PaperRequestLaw
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperBrain # Tide
   result: PaperBrain
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 #  PaperCargo
 - type: latheRecipe
   id: PaperCargoOrder # Tide
   result: PaperCargoOrder
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 #  PaperService
 - type: latheRecipe
   id: PaperRequestUpID # Tide
   result: PaperRequestUpID
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestWork # Tide
   result: PaperRequestWork
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestTrash # Tide
   result: PaperRequestTrash
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperEndTrash # Tide
   result: PaperEndTrash
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestCourt # Tide
   result: PaperRequestCourt
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperDismissalSer # Tide
   result: PaperDismissalSer
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperPromotion # Tide
   result: PaperPromotion
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 - type: latheRecipe
   id: PaperRequestBotan # Tide
   result: PaperRequestBotan
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 #  PaperSyndicat
 - type: latheRecipe
   id: PaperSyndicat # Tide
   result: PaperSyndicat
-  completetime: 5
+  completetime: 3
   materials:
-    Paper: 0
+    Paper: 100
 
 # PapersAll
 #  Station->CentComm
@@ -925,62 +925,62 @@
 - type: latheRecipe
   id: BoxFolderGreenBAN # Tide
   result: BoxFolderGreenBAN
-  completetime: 5
+  completetime: 3
   materials:
     Paper: 999
 
 - type: latheRecipe
   id: BoxFolderGreyBAN # Tide
   result: BoxFolderGreyBAN
-  completetime: 5
+  completetime: 3
   materials:
     Paper: 999
 
 - type: latheRecipe
   id: BoxFolderWhiteBAN # Tide
   result: BoxFolderWhiteBAN
-  completetime: 5
+  completetime: 3
   materials:
     Paper: 999
 
 - type: latheRecipe
   id: BoxFolderYellowBAN # Tide
   result: BoxFolderYellowBAN
-  completetime: 5
+  completetime: 3
   materials:
     Paper: 999
 
 - type: latheRecipe
   id: BoxFolderBlueBAN # Tide
   result: BoxFolderBlueBAN
-  completetime: 5
+  completetime: 3
   materials:
     Paper: 999
 
 - type: latheRecipe
   id: BoxFolderRedBAN # Tide
   result: BoxFolderRedBAN
-  completetime: 5
+  completetime: 3
   materials:
     Paper: 999
 
 - type: latheRecipe
   id: BoxFolderRYellowBAN # Tide
   result: BoxFolderRYellowBAN
-  completetime: 5
+  completetime: 3
   materials:
     Paper: 999
 
 - type: latheRecipe
   id: BoxFolderPurpleBAN # Tide
   result: BoxFolderPurpleBAN
-  completetime: 5
+  completetime: 3
   materials:
     Paper: 999
 
 - type: latheRecipe
   id: BoxFolderBlackBAN # Tide
   result: BoxFolderBlackBAN
-  completetime: 5
+  completetime: 3
   materials:
     Paper: 999
