Fix Shuttle Roles spawning without PDAs and Headsets (#28045)
* Move to starting gear, define a bunch of stuff

* Spacing

(cherry picked from commit 2be42871937748a6d4d78081a7c8631213d4eb96)

--- a/Resources/Prototypes/Entities/Mobs/Player/humanoid.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/humanoid.yml
@@ -647,7 +647,7 @@
         settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
-      roleLoadout: [ JobCargoTechnician ]
+      prototypes: [ LostCargoTechGearSuit, LostCargoTechGearCoat ]
     - type: RandomMetadata
       nameSegments:
       - names_first
@@ -702,7 +702,7 @@
         settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
-      roleLoadout: [ JobClown ]
+      prototypes: [ ClownTroupe ]
     - type: RandomMetadata
       nameSegments:
       - names_clown
@@ -760,7 +760,7 @@
         settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
-      roleLoadout: [ JobChef ]
+      prototypes: [ TravelingChef ]
     - type: RandomMetadata
       nameSegments:
       - names_first
@@ -823,7 +823,7 @@
         settings: default
     - type: GhostTakeoverAvailable
     - type: Loadout
-      roleLoadout: [ JobResearchDirector ]
+      prototypes: [ DisasterVictimRD, DisasterVictimRDAlt ]
     - type: RandomMetadata
       nameSegments:
       - names_first
@@ -841,7 +841,7 @@
         settings: default
     - type: GhostTakeoverAvailable
     - type: Loadout
-      roleLoadout: [ JobChiefMedicalOfficer ]
+      prototypes: [ DisasterVictimCMO, DisasterVictimCMOAlt ]
     - type: RandomMetadata
       nameSegments:
       - names_first
@@ -859,7 +859,7 @@
         settings: default
     - type: GhostTakeoverAvailable
     - type: Loadout
-      roleLoadout: [ JobCaptain ]
+      prototypes: [ DisasterVictimCaptain, DisasterVictimCaptainAlt ]
     - type: RandomMetadata
       nameSegments:
       - names_first
@@ -906,7 +906,7 @@
         settings: short
     - type: GhostTakeoverAvailable
     - type: Loadout
-      prototypes: [ SyndicateOperativeGearCivilian ]
+      prototypes: [ SyndicateOperativeGearDisasterVictim ]
     - type: RandomMetadata
       nameSegments:
       - names_first
